tdf#131618 MailMerge: Don't require DataSourceName if ResultSet provided

Allows to use ResultSet instead of DataSourceName and DataCommand
options.

Change-Id: I654cdf3bc850ab1c1a29837e8aabdee410b30439